--- a/resources/layouts/header.phtml
+++ b/resources/layouts/header.phtml
@@ -6,7 +6,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
 
-    <title>Phone Store - Cadastro de Usuários</title>
+    <title>Phone Store - Painel Administrativo
+    </title>
 
     <meta name="description" content="" />
 
@@ -41,13 +42,12 @@
 </head>
 
 <body>
-<?php
-    if($_GET['feedback'] === 'pwdsuccess')
-        {
-            echo '<script>
+    <?php
+    if ($_GET['feedback'] === 'pwdsuccess') {
+        echo '<script>
                 swal("Sucesso!", "A senhas foi alterada!", "success");
             </script>';
-        } 
+    }
     ?>
     <!-- Layout wrapper -->
     <div class="layout-wrapper layout-content-navbar">
@@ -81,36 +81,61 @@
                     <li class="menu-header small text-uppercase">
                         <span class="menu-header-text">MENU</span>
                     </li>
+                    <?php
+                    if ($_SESSION['vizualizar'] == 1) {
+                        echo '<li class="menu-item">
+                            <a class="menu-link menu-toggle">
+                                <i class="menu-icon tf-icons bx bxs-user"></i>
+                                <div data-i18n="users">Usuários/Perfis</div>
+                            </a>
+                            <ul class="menu-sub">
+                                <li class="menu-item">
+                                    <a href="/listusers" class="menu-link">
+                                        <div data-i18n="listusers">Lista de Usuários</div>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/createusers" class="menu-link">
+                                        <div data-i18n="newusers">Novo Usuário</div>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/listprofiles" class="menu-link">
+                                        <div data-i18n="profileslist">Lista de Perfis</div>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/createprofile" class="menu-link">
+                                        <div data-i18n="profiles">Novo Perfil</div>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>';
+                    }
+                    ?>
                     <li class="menu-item">
                         <a class="menu-link menu-toggle">
-                            <i class="menu-icon tf-icons bx bx-dock-top"></i>
-                            <div data-i18n="users">Usuários/Perfis</div>
+                            <i class='menu-icon tf-icons bx bx-border-all'></i>
+                            <div data-i18n="users">Produtos</div>
                         </a>
                         <ul class="menu-sub">
                             <li class="menu-item">
-                                <a href="/listusers" class="menu-link">
-                                    <div data-i18n="listusers">Lista de Usuários</div>
+                                <a href="/listproducts" class="menu-link">
+                                    <div data-i18n="listproducts">Lista de Produtos</div>
                                 </a>
                             </li>
                             <li class="menu-item">
-                                <a href="/createusers" class="menu-link">
-                                    <div data-i18n="newusers">Novo Usuário</div>
-                                </a>
-                            </li>
-                            <li class="menu-item">
-                                <a href="/listprofiles" class="menu-link">
-                                    <div data-i18n="profileslist">Lista de Perfis</div>
-                                </a>
-                            </li>
-                            <li class="menu-item">
-                                <a href="/createprofile" class="menu-link">
-                                    <div data-i18n="profiles">Novo Perfil</div>
+                                <a href="/createproduct" class="menu-link">
+                                    <div data-i18n="createproduct">Adicionar Produtos</div>
                                 </a>
                             </li>
                         </ul>
                     </li>
+                    <li class="menu-header small text-uppercase">
+                        <span class="menu-header-text">Sessão</span>
+                    </li>
                     <li class="menu-item">
-                        <a href="javascript:void(0);" class="menu-link menu-toggle">
+                        <a class="menu-link menu-toggle">
                             <i class="menu-icon tf-icons bx bx-lock-open-alt"></i>
                             <div data-i18n="session">Sessão do Usuário</div>
                         </a>
@@ -121,7 +146,7 @@
                                 </a>
                             </li>
                             <li class="menu-item">
-                                <a href="/logout" class="menu-link" target="_blank">
+                                <a href="/logout" onclick="return confirm('Deseja realmente sair?')" class="menu-link">
                                     <div data-i18n="Basic">Encerrar Sessão</div>
                                 </a>
                             </li>
@@ -171,7 +196,7 @@
                                                 </div>
                                                 <div class="flex-grow-1">
                                                     <span class="fw-semibold d-block"><?php echo $_SESSION['fullname'] ?></span>
-                                                    <small class="text-muted"><?php echo $_SESSION['email'] ?></small>
+                                                    <small class="text-muted"><?php echo $_SESSION['profiles'] ?></small>
                                                 </div>
                                             </div>
                                         </a>
@@ -186,16 +211,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a class="dropdown-item" href="#">
-                                            <i class="bx bx-cog me-2"></i>
-                                            <span class="align-middle">Configurações</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <div class="dropdown-divider"></div>
-                                    </li>
-                                    <li>
-                                        <a class="dropdown-item" href="/logout">
+                                        <a class="dropdown-item" href="/logout" onclick="return confirm('Deseja realmente sair?')">
                                             <i class="bx bx-power-off me-2"></i>
                                             <span class="align-middle">Encerrar Sessão</span>
                                         </a>
@@ -296,26 +312,16 @@
             let novaSenha = formsenha.novaSenha.value;
             let senha = formsenha.senha.value;
 
-            if(novaSenha === '' || novaSenha <= 6)
-            {
+            if (novaSenha === '' || novaSenha <= 6) {
                 swal("Atenção!", "A senha precisa ter no minimo 6 caracteres!", "warning");
                 formsenha.novaSenha.focus();
                 return false;
-            } else if(novaSenha != senha || senha <= 6)
-            {
+            } else if (novaSenha != senha || senha <= 6) {
                 swal("Atenção!", "A senhas não são iguais!", "warning");
                 formsenha.novaSenha.focus();
                 return false;
             }
         }
-
-
-        // let urlParams = new URLSearchParams(window.location.search);
-        // let pwdSuccess = urlParams.has('feedback')
-
-        // if(pwdSuccess) {
-        //     swal("Sucesso!", "A senhas foi alterada!", "success");
-        // }
     </script>
     <!-- Fim validação -->
 
