--- a/resources/views/products/index.phtml
+++ b/resources/views/products/index.phtml
@@ -7,29 +7,21 @@
             <div class="col-md-6 col-lg-6 mb-3">
                 <div class="card h-100">
                     <div id="<?= 'phone'.$smartphone['id'] ?>" class="carousel slide" data-bs-ride="carousel">
-                        <ol class="carousel-indicators">
-                            <li data-bs-target="#<?= 'phone'.$smartphone['id'] ?>" data-bs-slide-to="0" class=""></li>
-                            <li data-bs-target="#<?= 'phone'.$smartphone['id'] ?>" data-bs-slide-to="1" class="active" aria-current="true"></li>
-                            <li data-bs-target="#<?= 'phone'.$smartphone['id'] ?>" data-bs-slide-to="2"></li>
-                        </ol>
+                        
                         <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img class="d-block w-100" src="../assets/img/elements/13.jpg" alt="First slide">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="../assets/img/elements/12.jpg" alt="First slide">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="../assets/img/elements/11.jpg" alt="First slide">
-                            </div>
+                            <?php for ($i = 0; $i <= 4; $i++) { ?>
+                                <div class="carousel-item <?= $i == 0 ? 'active' : '' ?>">
+                                    <img class="d-block w-100" src="<?= (file_exists('storage/products/smartphones/'.$smartphone["photo$i"]) ? "storage/products/smartphones/".$smartphone["photo$i"] : ''); ?>">
+                                </div>
+                            <?php } ?>
                         </div>
-                        <a class="carousel-control-prev" href="#<?= 'phone'.$smartphone['id'] ?>" role="button" data-bs-slide="prev">
+                        <a class="carousel-control-prev" href="#<?= 'phone' . $smartphone['id'] ?>" role="button" data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
+                            <span class="visually-hidden">Anterior</span>
                         </a>
-                        <a class="carousel-control-next" href="#<?= 'phone'.$smartphone['id'] ?>" role="button" data-bs-slide="next">
+                        <a class="carousel-control-next" href="#<?= 'phone' . $smartphone['id'] ?>" role="button" data-bs-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
+                            <span class="visually-hidden">Próximo</span>
                         </a>
                     </div>
                     <div class="card-body">
