--- a/resources/views/products/index.phtml
+++ b/resources/views/products/index.phtml
@@ -7,13 +7,10 @@
             <div class="col-md-6 col-lg-6 mb-3">
                 <div class="card h-100">
                     <div id="<?= 'phone'.$smartphone['id'] ?>" class="carousel slide" data-bs-ride="carousel">
-                        
                         <div class="carousel-inner">
-                            <?php for ($i = 0; $i <= 4; $i++) { ?>
-                                <div class="carousel-item <?= $i == 0 ? 'active' : '' ?>">
-                                    <img class="d-block w-100" src="<?= (file_exists('storage/products/smartphones/'.$smartphone["photo$i"]) ? "storage/products/smartphones/".$smartphone["photo$i"] : ''); ?>">
-                                </div>
-                            <?php } ?>
+                            <div class="carousel-item <?= $key == 0 ? 'active' : '' ?>">
+                                <img class="d-block w-100" src="storage/products/smartphones/">
+                            </div>
                         </div>
                         <a class="carousel-control-prev" href="#<?= 'phone' . $smartphone['id'] ?>" role="button" data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
